--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,8 +1,9 @@
 <section class="hero dim">
     <div class="hero-inner">
         <div class="hero-text"></div>
-        <h2>Local is Vital</h2>
-        <h3>Search local companies any way you want. Local shops are around you everywhere and carry all the products you want.</h3>
+        <img class="text-img" src="text-img.png">
+        <!-- <h2>Local is Vital</h2> -->
+        <h2>Search local businesses any way you want. Local shops and businesses are around you everywhere and carry all the products and services you need.</h2>
         <a href="/login" class="btn">Start Here</a>   
         </div>
     </div>
