--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -3,7 +3,7 @@
         <h2>Contact Us</h2>
     </div>
     <div class="d-flex justify-content-center align-items-center mt-5 row">
-        <div class="col-sm-6 contact-info">
+        <div class="col-md-6 contact-info">
             <h3>LocalShop</h3>
             <p>
                 Have any questions, comments, or concerns? <br>
@@ -34,8 +34,8 @@
             </form>
         </div> 
 --}}
-        <div class="col-sm-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11545.168943821136!2d-79.3956564!3d43.6628917!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8d1d9bb6765a76f7!2sUniversity%20of%20Toronto%20-%20St.%20George%20Campus!5e0!3m2!1sen!2sca!4v1622929085256!5m2!1sen!2sca" width="550" height="450" style="border:0;" loading="lazy"></iframe>
+        <div class="col-md-6">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11545.168943821136!2d-79.3956564!3d43.6628917!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8d1d9bb6765a76f7!2sUniversity%20of%20Toronto%20-%20St.%20George%20Campus!5e0!3m2!1sen!2sca!4v1622929085256!5m2!1sen!2sca" style="border:0;" loading="lazy"></iframe>
         </div>
     </div>
 </div>
