all Businesses and home page styling

--- a/views/partials/company-card.handlebars
+++ b/views/partials/company-card.handlebars
@@ -1,8 +1,10 @@
-<div class="card col-3 m-2">
+<div class="card col-md-3 m-1 p-4">
   <div class="card-body">
-    <h5 class="card-title">{{company_name}}</h5>
+    <h2 class="card-title mb-3">{{company_name}}</h2>
     <p class="card-text">{{about}}</p>
-    <h6 class="card-subtitle mb-2 text-muted">Phone: {{phone}}</h6>
-    <a href="/company/{{id}}" class="card-link ">View more</a>
+    <h6 class="card-subtitle pb-5 ">Phone: {{phone}}</h6>
+    <div>
+    <a href="/company/{{id}}" class="card-link mb-3">VIEW MORE</a>
+    </div>
   </div>
 </div>
