--- a/views/result.handlebars
+++ b/views/result.handlebars
@@ -1,5 +1,5 @@
 
-<div class="d-flex flex-wrap justify-content-center">
+<div class="row d-flex flex-wrap justify-content-center">
   {{#each companies as |company|}}
     {{> company-card company}}
   {{/each}}
