--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,14 +1,32 @@
+:root {
+	--color-primary: ##3C7EC2;
+	--color-text-light: #fff;
+	--color-bg-light: #FAFAFC;
+
+	--space-1: .5rem;  /* 8px */
+	--space-2: 1rem;   /* 16px */
+  }
+
 * {
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
-	font-family: "Nunito", sans-serif;
+	font-family: 'Roboto', sans-serif, "Nunito", sans-serif;
 }
 
 body, html{
+	width: 100%;
 	height: 100%;
-	margin: 0;
-	padding: 0;
 	background-color: #F9F9F9;
-	
+}
+
+a {
+	color: #F9F9F9;
+	text-decoration: none;
+}
+
+a :hover {
+	color: #E4A31E;
 }
 
 .navbar {
@@ -21,6 +39,9 @@ body, html{
     display: flex;
     flex-direction: column;
 }
+main {
+	margin: 3rem 0;
+}
 
 .logo {
 	width: 210px;
@@ -31,21 +52,15 @@ main{
 	flex: 1
 }
 
-.dim {
+/*.dim {
 	filter: brightness(80%);
-}
+}*/
 
 footer {
 	display: flex;
 	justify-content: center;
 	background-color: #052342;
 	padding: 1% 0;
-}
-
-header a,
-footer a {
-	text-decoration: none;
-	color: white;
 }
 
 /*  sidebar styling start */
@@ -72,7 +87,7 @@ footer a {
 }
 
 .sidebar a:hover {
-	color: #f1f1f1;
+	color: #F9F9F9;
 }
 
 .sidebar .closebtn {
@@ -93,28 +108,13 @@ footer a {
 }
 
 .openbtn:hover {
-	color: #DA9C21;
-}
-
-.btn-no-style{
-	background: none;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-    text-decoration: none;
-    color: white;
-    font-size: 100%;
-    transition: color .1s;
-    margin-left: 16px;
-}
-.btn-no-style:hover {
-    background: none;
-    color: #DA9C21;
+	color: #E4A31E;
 }
 
 #main {
 	transition: margin-left 0.5s;
 }
+
 
 /* On smaller screens, where height is less than 450px, */
 @media screen and (max-height: 450px) {
@@ -127,76 +127,96 @@ footer a {
 }
 /* sidebar styling end */
 
-body,
-html {
-	height: 100%;
+.btn-no-style{
+	background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+    transition: color .1s;
+    margin-left: 1rem;
+}
+.btn-no-style:hover {
+    background: none;
+    color: #DA9C21;
 }
 
-/* The hero image */
-
+/* Home-handlebars page styling 
 .hero {
-	/* Sizing */
+	/* Sizing 
 	width: 100vw;
 	height: 100vh;
 	max-width: 100%;
 
-	/* Flexbox  */
+	/* Flexbox  
 	display: flex;
 	justify-content: center;
 	align-items: center;
 
-	/* Text styles */
+	/* Text styles 
 	text-align: center;
-	color: rgb(30, 235, 166);
+	/*color: rgb(30, 235, 166);
 	padding: 20vw;
 
-	/* Background styles 
-	background-image: url("https://images.unsplash.com/photo-1565201426074-a17f574f8692?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1376&q=80");
-	background-size: cover;
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-attachment: fixed; */
 }
 .hero-text {
-	margin-left: 10vw;
-	margin-right: 10vw;
+	margin-left: 5vw;
+	margin-right: 5vw;
 }
 
 .hero h1 {
-	/* Text styles */
-	font-size: 5em;
+	/* Text styles 
+	font-size: 2rem;
+	line-height: 3.1rem;
+	font-family: 'lora', serif;
 
-	/* Margins */
+	/* Margins 
 	margin-top: 0;
-	margin-bottom: 0.5em;
+	margin-bottom: 3rem;
+}
+ */
+.hero img {
+	width: 60vw;
+	height: auto;
+} 
+
+/* result.handlebars page card */
+.card {
+	background-color: #95ABBC;
+	border: none;
+	border-radius: 0;
 }
 
-.hero .btn {
-	/* Positioning and sizing */
-	display: block;
-	width: 200px;
+.card-text {
+	font-family: 'lora', serif;
+	font-size: 1.3rem;
+}
+.card-link {
+	font-size: 1rem;
+	background-color:#052342;
+	padding: 0.6rem;
+}
+.card-link:hover {
+	color: #E4A31E;
+}
 
-	/* Padding and margins */
-	padding: 0.5em;
-	margin-top: 50px;
-	margin-left: auto;
-	margin-right: auto;
-
-	/* Text styles */
-	color: white;
+.btn {
+	background-color: #E4A31E;
+	color: #F9F9F9;
 	text-decoration: none;
 	font-size: 1.5em;
-
-	/* Border styles */
-	border: 3px solid white;
-	border-radius: 20px;
 }
 
-h2 {
-	font-family: 'Lora', serif;
-	color: #052342;
-	line-height: 3rem;
+.btn :hover {
+ color: #95ABBC;
 }
+
+.line {
+	margin: 3em;
+}
+
 /* Single Company Page styling */
 
 .single-company {
@@ -229,14 +249,7 @@ h2 {
 }
 
 
-:root {
-	--color-primary: #005AF0;
-	--color-text-light: #fff;
-	--color-bg-light: #FAFAFC;
 
-	--space-1: .5rem;  /* 8px */
-	--space-2: 1rem;   /* 16px */
-  }
   /* some basic button styling */
   .favorite-button input[type=submit] {
 	width: 48px;
@@ -319,3 +332,39 @@ h2 {
 	margin: 0 1rem;
 	cursor: pointer;
   }
+
+  /* slider carousel media query */
+
+  @media (max-width: 767px) {
+    .carousel-inner .carousel-item > div {
+        display: none;
+    }
+    .carousel-inner .carousel-item > div:first-child {
+        display: block;
+    }
+}
+
+.carousel-inner .carousel-item.active,
+.carousel-inner .carousel-item-next,
+.carousel-inner .carousel-item-prev {
+    display: flex;
+}
+
+/* medium and up screens */
+@media (min-width: 768px) {
+    
+    .carousel-inner .carousel-item-end.active,
+    .carousel-inner .carousel-item-next {
+      transform: translateX(25%);
+    }
+    
+    .carousel-inner .carousel-item-start.active, 
+    .carousel-inner .carousel-item-prev {
+      transform: translateX(-25%);
+    }
+}
+
+.carousel-inner .carousel-item-end,
+.carousel-inner .carousel-item-start { 
+  transform: translateX(0);
+}
