--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,10 +1,94 @@
-<section class="hero dim">
-    <div class="hero-inner">
-        <div class="hero-text"></div>
+<section class="container hero ">
+    <div class="row d-flex justify-content-center">
+        <div class="col-8 d-flex justify-content-center hero-text">
         <img class="text-img" src="text-img.png">
-        <!-- <h2>Local is Vital</h2> -->
-        <h2>Search local businesses any way you want. Local shops and businesses are around you everywhere and carry all the products and services you need.</h2>
-        <a href="/login" class="btn">Start Here</a>   
         </div>
+        <!-- <h2>Local is Vital</h2> -->
+        <div class="col-8 d-flex justify-content-center text-center">
+        <h1 class="p-2">Search local businesses any way you want. Local shops and businesses are around you everywhere and carry all the products and services you need.</h1>
+        </div>
+
+        <div class="col-8 d-flex justify-content-center p-4">
+        <a href="/login" class="btn">START HERE</a>   
+        </div>
+         <hr class="line">
+
+        
+          
+    </div>      
+    <!--<div class="row mx-auto my-auto justify-content-center">
+        <div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="//via.placeholder.com/500x400/31f?text=1" class="img-fluid">
+                            </div>
+                            <div class="card-img-overlay">Slide 1</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="//via.placeholder.com/500x400/e66?text=2" class="img-fluid">
+                            </div>
+                            <div class="card-img-overlay">Slide 2</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="//via.placeholder.com/500x400/7d2?text=3" class="img-fluid">
+                            </div>
+                            <div class="card-img-overlay">Slide 3</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="//via.placeholder.com/500x400?text=4" class="img-fluid">
+                            </div>
+                            <div class="card-img-overlay">Slide 4</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="//via.placeholder.com/500x400/aba?text=5" class="img-fluid">
+                            </div>
+                            <div class="card-img-overlay">Slide 5</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="//via.placeholder.com/500x400/fc0?text=6" class="img-fluid">
+                            </div>
+                            <div class="card-img-overlay">Slide 6</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev bg-transparent w-aut" href="#recipeCarousel" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </a>
+            <a class="carousel-control-next bg-transparent w-aut" href="#recipeCarousel" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </a>
+        </div>
+    </div> -->
+
     </div>
 </section>
+
