--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,8 +14,8 @@
 
 <body>
     <div class="wrapper">
-        <header>
-            <nav class="navbar navbar-static-top navbar-expand-sm">
+        
+            <nav class="navbar sticky-top  navbar-expand-sm">
                 <div class="container-fluid row p-3">
                 <div class="col" id="main">
                     <button class="openbtn" onclick="openNav()">☰</button>
@@ -25,16 +25,14 @@
                 </div>
                 <div class="col d-flex flex-row-reverse">
                     {{#if loggedIn}}
-                    <a class="p-2 text-right" href="/dashboard">Business Owner Dashboard</a>
+                    <a class="p-2 btn-no-style text-right" href="/dashboard">Business Owner Dashboard</a>
                     <button id="logout" class="p-2 btn-no-style">Logout</button>
                     {{else}}
-                    <a href="/login">Login</a>
+                    <a class="btn-no-style" href="/login">Login</a>
                     {{/if}}
                 </div>
                 </div>
-            </nav>
-
-            <div id="mySidebar" class="sidebar">
+                <div id="mySidebar" class="sidebar">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
                 <a href="/searchAll">All Businesses</a>
                 <a href="#">Business Name</a>
@@ -43,7 +41,8 @@
                 <a href="#">About Us</a>
                 <a href="#">Contact Us</a>
             </div>
-        </header>
+            </nav>
+
 
         <main>
             {{{ body }}}
@@ -53,7 +52,7 @@
             <a href="/">LocalShop ©2021</a>
         </footer>
     </div>
-    
+
     {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
     {{/if}}
@@ -69,6 +68,7 @@
             document.getElementById("main").style.marginLeft = "0";
         }
     </script>
+    <script> src="/javascript/slide-carousel.js"></script>
 
 </body>
 
