--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,13 +9,13 @@
     {{!-- change input type to password --}}
     <input type="text" class="form-control" id="password-login"/>
   </div>
-  <div class="d-grid gap-2 col-6 mx-auto">
-    <button type="submit" class="btn btn-primary">Login</button>
+  <div class="d-flex justify-content-center p-4">
+    <button type="submit" class="btn">Login</button>
     
   </div>
 </form>
-<div class="d-flex justify-content-center p-3">
-  <button type="click" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#signup-modal">New User</button>
+<div class="d-flex justify-content-center p-4">
+  <button type="click" class="btn px-3" data-bs-toggle="modal" data-bs-target="#signup-modal">New User</button>
 </div>
 
 <div class="modal" tabindex="-1" id="signup-modal">
