--- a/views/partials/company-card.handlebars
+++ b/views/partials/company-card.handlebars
@@ -3,8 +3,8 @@
     <h2 class="card-title mb-3">{{company_name}}</h2>
     <p class="card-text">{{about}}</p>
     <h6 class="card-subtitle pb-5 ">Phone: {{phone}}</h6>
-    <div>
-    <a href="/company/{{id}}" class="card-link mb-3">VIEW MORE</a>
-    </div>
+    
+    <a href="/company/{{id}}" class="card-link align-self-end mb-3">VIEW MORE</a>
+
   </div>
 </div>
