--- a/views/partials/product-info.handlebars
+++ b/views/partials/product-info.handlebars
@@ -1,5 +1,5 @@
 <div class="products-section justify-content-center border border-info">
-    <h3>Products / Services Offered</h3>
+    <h3 class="mt-3">Products / Services Offered</h3>
     <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">Product:</h5>
