--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 
-<div class="container-fluid bg-info p-2 mt-3">
+<div class="container-fluid page-title p-2 mt-3 text-center">
 <h1 class="p-3">Welcome {{username}}</h1>
 </div>
 
@@ -57,10 +57,11 @@
   </div>
 <!-- Hours -->
 <div class="container-fluid mt-3">
-    <div class="row mt-3">
-    <div class="col">
+   
+    <div class="row mt-4">
     <h4>Business Hours: </h4>
     </div>
+    <div class="row mt-3">
     <div class="col">
     <label for="mon" class="form-label">Mon</label>
     <input type="text" class="form-control" value="{{company.hour.mon}}" id="mon"> 
@@ -96,7 +97,7 @@
 <!-- Products -->
 <div class="container-fluid mt-3" id="product-list">
   {{#if company.products}}
-    <h4 class="mt-3"> List your products and/or services:</h4>
+    <h4 class="mt-4"> List your products and/or services:</h4>
     {{#each company.products as |product|}}
     {{> add-company product}}
     {{/each}}
@@ -112,7 +113,7 @@
       <textarea name="description-text" class="form-control" rows="1" id="description-add-text" placeholder="Product/Service Description">{{description_text}}</textarea>
     </div>
     <div class="col-md-1 d-flex justify-content-end align-items-end">
-      <button type="button" class="btn btn-primary" id="add-product-btn">+</button>
+      <button type="button" class="btn " id="add-product-btn">+</button>
     </div>
   </div>
 </div>
@@ -121,12 +122,12 @@
 <!-- Save button -->
 {{#if company}}
 <div class="col-12 d-flex justify-content-center mt-4">
-    <button type="submit" class="btn btn-primary">Update Company</button>
+    <button type="submit" class="btn ">Update Company</button>
 </div> 
 {{else}}
 <div class="row" >
     <div class="col-12 d-flex justify-content-center mt-4">
-    <button type="submit" class="btn btn-primary">Create Company</button>
+    <button type="submit" class="btn ">Create Company</button>
 </div>
 {{/if}}
 </form>
