--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -33,21 +33,10 @@
     <div class="col-md-4">
     <label for="industry" class="form-label">Industry</label>
     <select name="industry" class="form-select  mb-3" id="industry" aria-label=".form-select-lg example">
-      <option selected>Choose a industry...</option>
-      <option value="1" {{#if company.industry.id}}selected{{/if}}>Furniture</option>
-      <option value="2">Wearable Accessories</option>
-      <option value="3">Apparel</option>
-      <option value="4">Home Kitchen and Dining</option>
-      <option value="5">Home Bedding</option>
-      <option value="6">Home Bathroom</option>
-      <option value="7">Home Outdoor</option>
-      <option value="8">Garden</option>
-      <option value="9">Games</option>
-      <option value="10">Reading</option>
-      <option value="11">Toys</option>
-      <option value="12">Home Services</option>
-      <option value="13">Commercial Services</option>
-      <option value="14">Administration and Office</option>
+      <option>Choose a industry...</option>
+      {{#each industries as |industry|}}
+      {{> industry-selection industryId=industry.id industryName=industry.industry_name currentIndustry=company.industry.id}}
+      {{/each}}
     </select>
   </div>
 <!-- About Us -->
