--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -68,7 +68,7 @@
             document.getElementById("main").style.marginLeft = "0";
         }
     </script>
-    <script> src="/javascript/slide-carousel.js"></script>
+    <script> src="/javascript/slide-carousel.js"</script>
 
 </body>
 
