products in single company page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
                     <button class="openbtn" onclick="openNav()">☰</button>
                 </div>
                 <div class="col d-flex justify-content-center">
-                    <a href="/"><img class="logo" src="logo.png"></a>
+                    <a href="/"><img class="logo" src="/images/logo.png"></a>
                 </div>
                 <div class="col d-flex flex-row-reverse">
                     {{#if loggedIn}}
