--- a/views/partials/product-info.handlebars
+++ b/views/partials/product-info.handlebars
@@ -1,11 +1,7 @@
-<div class="products-section justify-content-center border border-info">
-    <h3 class="mt-3">Products / Services Offered</h3>
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Product:</h5>
-            <h5 class="card-title">{{Product.product_name}}</h5>
-            <h5 class="card-title">Description:</h5>
-            <p class="card-text">{{Product.description_text}}</p>
-        </div>
+
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">Product: <span class="card-text">{{product_name}}</span></h5>
+        <h5 class="card-title">Description: <span class="card-text">{{description_text}}</span></h5>
     </div>
 </div>
