--- a/views/partials/add-company.handlebars
+++ b/views/partials/add-company.handlebars
@@ -2,12 +2,12 @@
     <!-- Product Name -->
     <div class="col-md-4">
       <label for="product-name" class="form-label">Products/Service:</label>
-      <input type="text" class="form-control" value="{{product_name}}" id="product-name" placeholder="New Product">
+      <input type="text" class="form-control" value="{{product_name}}" id="product-name" placeholder="New Product" readonly>
     </div>
     <!-- Products Description -->
     <div class="col-md-7">
       <label for="description-text" class="form-label">Product Description:</label>
-      <textarea name="description-text" class="form-control" rows="1" id="description-text">{{description_text}}</textarea>
+      <textarea name="description-text" class="form-control" rows="1" id="description-text" readonly>{{description_text}}</textarea>
     </div>
     <!-- Delete Button -->
     <div class="col-md-1 d-flex justify-content-end align-items-end">
