--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -9,9 +9,9 @@
         </div>
 
         <div class="col-8 d-flex justify-content-center p-4">
-        <a href="/login" class="btn">START HERE</a>   
+        <a href="/searchAll" class="btn">START HERE</a>   
         </div>
-         <hr class="line">
+        <hr class="line">
 
         
           
@@ -87,8 +87,8 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
             </a>
         </div>
-    </div> -->
+    </div> 
+    </div>-->
 
-    </div>
 </section>
 
