--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,9 +35,9 @@
                 <div id="mySidebar" class="sidebar">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
                 <a href="/searchAll">All Businesses</a>
-                <a href="#">Business Name</a>
+                {{!-- <a href="#">Business Name</a>
                 <a href="#">Industry</a>
-                <a href="#">Services</a>
+                <a href="#">Services</a> --}}
                 <a href="/about-us">About</a>
                 <a href="/contact">Contact</a>
             </div>
