--- a/views/result.handlebars
+++ b/views/result.handlebars
@@ -1,4 +1,7 @@
 
+<div class="row">
+  <h1 class="display-4 text-center">LocalShop Search Results:</h1>
+</div>
 <div class="row d-flex flex-wrap justify-content-center">
   {{#each companies as |company|}}
     {{> company-card company}}
