--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -239,26 +239,45 @@ background-color: #052342;
 	background-position: center;
 	display: flex;
 	justify-content: center;
-	align-items: center;
 	flex-direction: column;
 	margin-bottom: 50px;
 }
 
-.company-name {
-	background-color: rgb(253, 238, 238);
-	opacity: 0.6;
+.company .card {
+	background-color: #F9F9F9;
+	margin: 0 1rem 1rem 0;
 }
-
+.company .card .card-body {
+	padding-left: 0;
+}
+.company section {
+	margin: 3rem;
+	text-align: left;
+}
 .company-name h1 {
 	font-size: 6rem;
+	font-weight: 900;
+	color: #fff;
 }
-
-.company-name a {
-	font-size: 3rem;
+.company h2 {
+	font-weight: bold;
+	font-size: 2rem;
+	margin-bottom: 1rem;
+}
+.company p {
+	font-size: 1.3rem;
+	line-height: 1.8rem;
+	margin: 0;
+}
+.company-info a {
+	color: #052342;
+}
+.company-info a:hover {
+	color: #E4A31E;
 }
 
 .company-info {
-	margin-bottom: 50px;
+	background-color: #D2DCE4;
 }
 
 /* dashboard style*/
@@ -312,6 +331,7 @@ form label, h4 {
 .favorite-button .heart-loading,
 .favorite-button .heart-loading[placeholder] {
 	background: url('data:image/svg+xml;utf8,<svg fill="%23cccccc" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"/></svg>');
+	
 }
 .favorite-button .favorite-container {
 	display: flex;
