--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -56,20 +56,10 @@
     {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
     {{/if}}
+     <script src="/javascript/sidebar.js"></script>
+    <script src="/javascript/slide-carousel.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.min.js"></script>
-    <script>
-        function openNav() {
-            document.getElementById("mySidebar").style.width = "250px";
-            document.getElementById("main").style.marginLeft = "250px";
-        }
-
-        function closeNav() {
-            document.getElementById("mySidebar").style.width = "0";
-            document.getElementById("main").style.marginLeft = "0";
-        }
-    </script>
-    <script> src="/javascript/slide-carousel.js"</script>
-
+    
 </body>
 
 </html>
