typed animation added to main page for external library use

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -515,3 +515,52 @@ iframe {
 	width: 500px;
 	height: 30rem;
 }
+
+/*Animation*/
+.center {
+	height: 250px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+/* span {
+	font-family: Arial;
+	font-size: 25px;
+	&.type{
+		margin:0 auto;
+		width:200px;
+		margin-top:100px;
+			&::after {
+		content: '|';
+		display: inline;
+		animation: blink 0.7s infinite;
+	}
+} */
+span {
+	font-size: 40px;
+}
+
+
+/*Removes cursor that comes with typed.js*/
+.typed-cursor{
+   opacity: 0;
+	display: none;
+}
+/*Custom cursor animation*/
+@keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
