--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,21 +1,17 @@
 <section class="container hero ">
     <div class="row d-flex justify-content-center">
-        <div class="col-8 d-flex justify-content-center hero-text">
-        <img class="text-img" src="text-img.png">
+        <div class="col-6 d-flex justify-content-center hero-text">
+            <img class="text-img" src="text-img.png">
         </div>
-        <!-- <h2>Local is Vital</h2> -->
         <div class="col-8 d-flex justify-content-center text-center">
-        <h1 class="p-2">Search local businesses any way you want. Local shops and businesses are around you everywhere and carry all the products and services you need.</h1>
+            <div class="center"><span class="type"></span>
+            </div>
         </div>
-
         <div class="col-8 d-flex justify-content-center p-4">
-        <a href="/searchAll" class="btn">START HERE</a>   
+            <a href="/searchAll" class="btn">START HERE</a>
         </div>
         <hr class="line">
-
-        
-          
-    </div>      
+    </div>
     <!--<div class="row mx-auto my-auto justify-content-center">
         <div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner" role="listbox">
@@ -90,5 +86,7 @@
     </div> 
     </div>-->
 
+    <!--A new js file or cdn link may be required to hold js for animation-->
+    <script src="/javascript/animation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.7/typed.min.js"></script>
 </section>
-
