--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,16 +12,15 @@
         </div>
         <hr class="line">
     </div>
-    <!--<div class="row mx-auto my-auto justify-content-center">
+    <div class="row mx-auto my-auto justify-content-center">
         <div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
                     <div class="col-md-3">
                         <div class="card">
                             <div class="card-img">
-                                <img src="//via.placeholder.com/500x400/31f?text=1" class="img-fluid">
+                                <img src="img-1.jpg" class="img-fluid">
                             </div>
-                            <div class="card-img-overlay">Slide 1</div>
                         </div>
                     </div>
                 </div>
@@ -29,9 +28,8 @@
                     <div class="col-md-3">
                         <div class="card">
                             <div class="card-img">
-                                <img src="//via.placeholder.com/500x400/e66?text=2" class="img-fluid">
+                                <img src="img-2.jpg" class="img-fluid">
                             </div>
-                            <div class="card-img-overlay">Slide 2</div>
                         </div>
                     </div>
                 </div>
@@ -39,9 +37,8 @@
                     <div class="col-md-3">
                         <div class="card">
                             <div class="card-img">
-                                <img src="//via.placeholder.com/500x400/7d2?text=3" class="img-fluid">
+                                <img src="img-3.jpg" class="img-fluid">
                             </div>
-                            <div class="card-img-overlay">Slide 3</div>
                         </div>
                     </div>
                 </div>
@@ -49,9 +46,8 @@
                     <div class="col-md-3">
                         <div class="card">
                             <div class="card-img">
-                                <img src="//via.placeholder.com/500x400?text=4" class="img-fluid">
+                                <img src="img-4.jpg" class="img-fluid">
                             </div>
-                            <div class="card-img-overlay">Slide 4</div>
                         </div>
                     </div>
                 </div>
@@ -59,9 +55,8 @@
                     <div class="col-md-3">
                         <div class="card">
                             <div class="card-img">
-                                <img src="//via.placeholder.com/500x400/aba?text=5" class="img-fluid">
+                                <img src="img-5.jpg" class="img-fluid">
                             </div>
-                            <div class="card-img-overlay">Slide 5</div>
                         </div>
                     </div>
                 </div>
@@ -69,9 +64,17 @@
                     <div class="col-md-3">
                         <div class="card">
                             <div class="card-img">
-                                <img src="//via.placeholder.com/500x400/fc0?text=6" class="img-fluid">
+                                <img src="img-6.jpg" class="img-fluid">
                             </div>
-                            <div class="card-img-overlay">Slide 6</div>
+                        </div>
+                    </div>
+                </div>
+                  <div class="carousel-item">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="img-7.jpg" class="img-fluid">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -84,7 +87,7 @@
             </a>
         </div>
     </div> 
-    </div>-->
+    </div>
 
     <!--A new js file or cdn link may be required to hold js for animation-->
     <script src="/javascript/animation.js"></script>
