--- a/views/result.handlebars
+++ b/views/result.handlebars
@@ -1,9 +1,13 @@
+<div class="row mt-2">
+  <img class="result-img" src="result-page.jpg">
+</div>
 
-<div class="row">
-  <h1 class="display-4 text-center">LocalShop Search Results:</h1>
+<div class="result-title row">
+  <h1 class="display-4 text-center">LocalShop Search Results</h1>
 </div>
 <div class="row d-flex flex-wrap justify-content-center">
   {{#each companies as |company|}}
     {{> company-card company}}
   {{/each}}
 </div>
+
