few minor style changes and README update

--- a/views/result.handlebars
+++ b/views/result.handlebars
@@ -1,5 +1,5 @@
 <div class="row mt-2">
-  <img class="result-img" src="result-page.jpg">
+  <img class="result-img" src="result-page.jpg" style="margin: 0 auto;">
 </div>
 
 <div class="result-title row">
