--- a/views/company.handlebars
+++ b/views/company.handlebars
@@ -20,6 +20,7 @@
                 <h2>Contact Us</h2>
                 <p>{{company.phone}}</p>
                 <p><a href="{{company.website}}" target="_blank">{{company.website}}</a></p>
+                <p>{{company.company_email}}</p>
             </section>
         
             <section>
